--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
           <version>3.0.0-M7</version>
           <configuration>
           <suiteXmlFiles>
-          <suiteXmlFile>testngop.xml</suiteXmlFile>
+          <suiteXmlFile>infofile.xml</suiteXmlFile>
           
           
           </suiteXmlFiles>
